# CGAL-matlab

./: .gitignore  CGAL_CreateSingleSourceCGALLib.cmake  CMakeLists.txt  README.md  mex_main.h  optimal_convex_partition.cpp  optimal_convex_partition.mexa64
convex_decomposition_3/: CMakeLists.txt  conv_decomp.cpp  convex_decomposition_3.cpp  convex_decomposition_3.m  convex_decomposition_3.mexa64  mex_main.h  mex_wrap.cpp
examples/: plot_polygon.m  test_convex_partition.m
greene_approx_convex_partition_2/: CMakeLists.txt  greene_approx_convex_partition.cpp  greene_approx_convex_partition.m  greene_approx_convex_partition.mexa64
optimal_convex_partition_2/: CMakeLists.txt  optimal_convex_partition.m  optimal_convex_partition.mexa64  optimal_convex_partition_2.cpp  optimal_convex_partition_2.mexa64
test/: CMakeLists.txt  mexFun.cpp  mexFun.mexa64
